fix alignement des flèches dans le cercle

--- a/src/App/components/Slider/styles.scss
+++ b/src/App/components/Slider/styles.scss
@@ -97,6 +97,7 @@
   z-index: 2;
   padding: 0;
   margin: 0;
+  font-size: 0;
   background: none;
   border: none;
   cursor: pointer;
